# ImGuiPack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CustomImConfig.h  ImGuiPack.h  README.md  imguipack.h  main.cpp  submodules.init.txt
cmake/: 3rdparty.cmake  glad.cmake  glfw.cmake  iagp.cmake  imguipack.cmake
src/: MainFrame.cpp  MainFrame.h
src/Graph/Manager/: NodeManager.cpp  NodeManager.h
src/Graph/Nodes/: BluePrintNode.cpp  BluePrintNode.h
src/Gui/: ImGuiThemes.cpp  MainFrame.cpp  MainFrame.h
src/Panes/: CodePane.cpp  CodePane.h  ConsolePane.cpp  GraphPane.cpp  GraphPane.h  ViewPane.cpp  ViewPane.h
